--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
   "scripts": {
     "devStart": "nodemon server.js"
   },
+
+  "engines": {
+    "node": "16.14.0"
+  },
+
   "author": "",
   "license": "ISC",
   "dependencies": {
