--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "engines": {
     "node": "16.14.0"
   },
-  
+
   "scripts": {
-    "devStart": "nodemon server.js"
+    "devStart": "node server.js"
   },
 
   "author": "",
