--- a/package.json
+++ b/package.json
@@ -3,18 +3,16 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-
   "engines": {
     "node": "16.14.0"
   },
-  
   "scripts": {
     "devStart": "nodemon server.js"
   },
-
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "mongoose": "^6.5.0"
   },
