changes to server.js

--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "newgirlapi",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
+  "type": "module",
   "engines": {
     "node": "16.14.0"
   },
   "scripts": {
-    "devStart": "nodemon server.js"
+    "devStart": "nodemon server.js",
+    "start" : "node server.js"
   },
   "author": "",
   "license": "ISC",
