--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,15 @@
 {
     "version": 2,
+    "builds" : [
+    {
+        "src": "server.js",
+        "user": "@vercel/node"
+    }
+    ],
     "routes": [
       {
-        "src": "/[^.]+",
-        "dest": "/"
+        "src": "/(.*)",
+        "dest": "server.js"
       }
     ]
   }
